# pf2-wiki-offline

./: .gitignore  AUTOMATION.md  LICENSE  README.md  patches.json
_tauri_placeholder/: index.html
_wiki_full_v2/: 404.html  README.html  _app_version.json  build_browse_letters_v2.py  build_browse_v2.py  build_class_hubs_v2.py  build_dead_stubs.py  build_nav_stubs.py  build_search_v2.py  build_v2.py  index.html  random.html  search.html  search.js  serve.py
agent_outputs_v2/: AUTO_ITER_STATE.md  ITERATION_LOG_v2.md  scout_report.md
pf2wiki-scraper/: .gitignore  README.md  _sample_next.py  build_supplement.py  cleanup_glossary.py  cookie_warmup_v2.py  dedup_sog.py  diff_against_glossary.py  dump_images_v2.py  dump_images_v2_concurrent.py  dump_metadata_v2.py  dump_parsed_v2.py  dump_parsed_v2_concurrent.py  dump_wikitext.py  extract_terms.py  fetch_native_styles_v2.py  harvest_titles.py  merge_into_glossary.py  pfwiki.py  probe.py  (+7 more)
src-tauri/: AUDIT.md  CATEGORY_FIX_PROGRESS.md  Cargo.toml  README.md  TODO_category_correctness.md  V0325_PROGRESS.md  V0326_PROGRESS.md  V0327_UXUI_PROGRESS.md  V0328_PROGRESS.md  V0330_AUDIT_SPECS.md  V0330_PROGRESS.md  WIKI_ALIGNMENT_AUDIT.md  WIKI_AUDIT.md  WIKI_UXUI_RESEARCH.md  _v0330_deadlink_full.py  _v0330_deadlink_triage.py  _v0330_verify_static.py  apply_patch.py  build_patch.py  make_portable_zip.ps1  release.ps1  tauri.conf.json  update_content.ps1
src-tauri/capabilities/: default.json
src-tauri/diagnostics/: acl_probe.mjs  updater_logic_test.mjs
src-tauri/permissions/: app-commands.toml
src-tauri/src/: main.rs
(+70 files in other folders)
