[package]
name = "pf2-wiki"
version = "0.3.21"
description = "PF2 中文百科 离线镜像 — Pathfinder 2e Chinese wiki offline mirror"
authors = ["takaqiao"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
mime_guess = "2"
urlencoding = "2"
open = "5"
ureq = { version = "2", default-features = false, features = ["tls"] }
sha2 = "0.10"

[features]
custom-protocol = ["tauri/custom-protocol"]
